# QSTriage

./: .gitattributes  .gitignore  BUILD_WEEK.md  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
.agents/skills/qstriage-evidence-closure/: SKILL.md
.codex/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  security.yml
docs/: algorithm-identifier-grammar.md  build-week-demo-script.md  build-week-submission.md  cbom-compatibility.md  decision-model.md  evidence-and-context.md  evidence-closure.md  input-contracts.md  pdr-contract.md  project_charter.md  roadmap_v0_2.md  scoring-rationale.md  simulation-rationale.md  source_lock_v0_3.md  standards-and-classification.md  usage.md  v0_8_0_policy_packs_plan.md
examples/: qstriage.yaml  sample_inventory.yaml
examples/build-week/: approved_enrichment.patch.yaml  imported.yaml  sample_cbom.json
examples/build-week/expected/: comparison.json  enriched.yaml  gaps.json
qstriage/: assessment.py  cbom.py  cli.py  closure.py  config.py  context.py  decision.py  enrichment.py  errors.py  evidence.py  exporters.py  file_output.py  graph.py  limits.py  mcp_server.py  models.py  pdr.py  policy.py  presentation.py  report.py  review.py  scoring.py  simulator.py  standards.py
requirements/: README.md  release.in
scripts/: build_week_demo.ps1  build_week_demo.py  build_week_demo.sh  normalize_dev_lock.py  release_artifacts.py
tests/: test_assessment.py  test_build_week_demo.py  test_cbom.py  test_cbom_ibm_style_compatibility.py  test_cbom_normalization_integration.py  test_cli.py  test_cli_cbom.py  test_cli_closure.py  test_cli_pdr.py  test_closure.py  test_closure_comparison.py  test_codex_skill.py  test_config.py  test_context.py  test_context_normalization_contract.py  test_context_normalization_cross_module.py  test_context_normalization_current_divergence.py  test_decision.py  test_dependency_lock.py  test_enrichment.py  test_enrichment_contract.py  test_errors.py  test_evidence.py  test_evidence_enrichment.py  test_exporters.py  test_file_output.py  test_graph.py  test_limits.py  test_mcp_server.py  test_models.py  test_pdr.py  test_pdr_pqc_evidence_quality.py  test_policy.py  test_policy_derived_facts_normalization.py  test_presentation.py  test_release_artifacts.py  test_release_metadata.py  test_release_workflow_contract.py  test_report.py  test_report_algorithm_evidence.py  (+7 more)
tests/fixtures/: algorithm_identifier_compatibility.json  ibm_style_cbom_minimal.json  sample_cbom.json
