[build-system]
requires = [
    "setuptools==83.0.0",
    "wheel==0.47.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "qstriage"
version = "1.2.0"
description = "Cryptographic Policy & Justification Engine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.8",
    "pyyaml>=6.0",
    "networkx>=3.3",
    "typer>=0.12",
    "rich>=13.7"
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3"
]

[project.scripts]
qstriage = "qstriage.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools]
packages = ["qstriage"]

[tool.pip-tools]
generate-hashes = true
strip-extras = true
resolver = "backtracking"
